--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test task for *",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "dependencies": {
     "express": "^4.17.2",
     "http-status-codes": "^2.2.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.7"
   }
 }
